# cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md  build.sh
.idx/: dev.nix
src/: hello.cpp  main.cpp
